Fix alignment issue

--- a/assets/css/content/_single.scss
+++ b/assets/css/content/_single.scss
@@ -5,6 +5,7 @@
   margin-left: 1rem;
   position: relative;
   top: -2px;
+  align-items: center;
 
   a {
     display: inline-block;
